fixed project height issue on small(<500px) screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -547,6 +547,10 @@ body {
     padding: 20px 15px;
   }
 
+  .middleContainerProjects .project {
+    height: fit-content;
+  }
+
   .footer {
     padding: 0.5rem;
     font-size: 0.7rem;
